fixed z-index for tooltips

--- a/src/app/(main)/projects/[id]/board/components/kanban-board/kanban-column/kanban-task-card/kanban-task-modal/kanban-task-modal.module.scss
+++ b/src/app/(main)/projects/[id]/board/components/kanban-board/kanban-column/kanban-task-card/kanban-task-modal/kanban-task-modal.module.scss
@@ -236,79 +236,3 @@
 		font-weight: 400;
 	}
 }
-
-.labelsEditor {
-	margin-top: 8px;
-	display: flex;
-	flex-direction: column;
-	gap: 8px;
-	width: 100%;
-}
-
-.emptyLabelsText {
-	font-size: 13px;
-	color: var(--textSecondary);
-	font-weight: 400;
-	font-style: italic;
-}
-
-.labelsList {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 3px;
-	width: 100%;
-	max-height: 100px;
-	overflow: auto;
-}
-
-.modalLabelTag {
-	display: inline-flex;
-	align-items: center;
-	gap: 6px;
-	font-size: 12px;
-	font-weight: 500;
-	color: var(--text);
-	background-color: var(--secondary);
-	border: 1px solid var(--btn-border);
-	border-radius: 4px;
-	padding: 2px 6px;
-	white-space: nowrap;
-}
-
-.removeLabelBtn {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	color: var(--textSecondary);
-	font-size: 14px;
-	line-height: 1;
-	cursor: pointer;
-	border: none;
-	background: transparent;
-	padding: 0 2px;
-	opacity: 0.7;
-	transform: translateY(1px);
-	transition: opacity 0.2s;
-
-	&:hover {
-		opacity: 1;
-	}
-}
-
-.labelInput {
-	width: 100%;
-	border: 1px solid var(--btn-border);
-	background-color: transparent;
-	color: var(--text);
-	border-radius: 5px;
-	padding: 6px 10px;
-	font-size: 13px;
-	font-weight: 400;
-	font-family: inherit;
-	outline: none;
-	transition: border-color 0.2s;
-
-	&:focus {
-		border-color: var(--textSecondary);
-	}
-}
